--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config ./webpack/webpack.config.js --display-error-details"
+    "build": "webpack --config ./webpack/webpack.config.js --display-error-details",
+    "dev": "node ./lib/server.js"
   },
   "repository": {
     "type": "git",
